--- a/templates/payment/paypal.html
+++ b/templates/payment/paypal.html
@@ -5,7 +5,7 @@
 {% load static %}
 {% block main_sidebar %}
 <div class='row'>
-<legend> Your Payment detals</legend>
+<legend> Your Payment details</legend>
 <table class="table table-bordered">
 <tbody>
 <tr>
