--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -4,10 +4,10 @@
 {% load static %}
 {% load url from future %}
 {% load i18n %}
-
+{% load crispy_forms_tags %}
 
 {% block title %}
-<title>LSCDS | Contact Us</title>
+LSCDS | Contact Us
  {% endblock%}
     {% block css %} 
       <!-- CSS Page Style -->    
@@ -15,18 +15,22 @@
     {% endblock %}
  {% block main %}
 
-    <!--=== Breadcrumbs ===-->
-    <div class="breadcrumbs">
-        <div class="container">
-            <h1 class="pull-left">Our Contacts</h1>
-            <ul class="pull-right breadcrumb">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Pages</a></li>
-                <li class="active">Contacts</li>
-            </ul>
-        </div>
-    </div><!--/breadcrumbs-->
-    <!--=== End Breadcrumbs ===-->
+
+            <h2>Our Contacts</h2>
+            
+{% if messages %}
+
+    {% for message in messages %}
+  <div class=" alert alert-success alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" 
+                              aria-hidden="true">
+                               &times;
+                            </button>
+                           {{message}}
+                        </div> 
+    {% endfor %}
+
+{% endif %}
 
     <!-- Google Map -->
     <div id="map" class="map">
@@ -38,42 +42,23 @@
     	<div class="row margin-bottom-30">
     		<div class="col-md-9 mb-margin-bottom-30">
                 <div class="headline"><h2>Contact Form</h2></div>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
-    			<form>
-                    <label>Name</label>
-                    <div class="row margin-bottom-20">
-                        <div class="col-md-7 col-md-offset-0">
-                            <input type="text" class="form-control">
-                        </div>                
-                    </div>
-                    
-                    <label>Email <span class="color-red">*</span></label>
-                    <div class="row margin-bottom-20">
-                        <div class="col-md-7 col-md-offset-0">
-                            <input type="text" class="form-control">
-                        </div>                
-                    </div>
-                    
-                    <label>Message</label>
-                    <div class="row margin-bottom-20">
-                        <div class="col-md-11 col-md-offset-0">
-                            <textarea rows="8" class="form-control"></textarea>
-                        </div>                
-                    </div>
-                    
-                    <p><button type="submit" class="btn-u">Send Message</button></p>
-                </form>
+                <p>
+All comments, collaboration and sponsorship opportunities are welcomed.
+You can also send us direct <a href="mailto:lscds.uoft@gmail.com"> email</a>
+                 </p><br />
+                 
+    			  {% crispy form %}   			
             </div><!--/col-md-9-->
             
     		<div class="col-md-3">
             	<!-- Contacts -->
                 <div class="headline"><h2>Contacts</h2></div>
                 <ul class="list-unstyled who margin-bottom-30">
-                    <li><a href="#"><i class="fa fa-home"></i>5B Streat, City 50987 New Town US</a></li>
-                    <li><a href="#"><i class="fa fa-envelope"></i>info@example.com</a></li>
-                    <li><a href="#"><i class="fa fa-phone"></i>1(222) 5x86 x97x</a></li>
-                    <li><a href="#"><i class="fa fa-globe"></i>http://www.example.com</a></li>
-                </ul>
+                    <li><a href="#"><i class="fa fa-home"></i>521 Sussex Ave<br>
+                                                       Sussex Clubhouse, Room 535<br>
+                                                        Toronto, ON, M5S 1J6</a></li>
+                    <li><a href="mailto:lscds.uoft@gmail.com"><i class="fa fa-envelope"></i>lscds.uoft [ at ] gmail.com</a></li>
+                       </ul>
 
             	<!-- Business Hours -->
                 <div class="headline"><h2>Business Hours</h2></div>
@@ -84,12 +69,11 @@
                 </ul>
 
             	<!-- Why we are? -->
-                <div class="headline"><h2>Why we are?</h2></div>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
-                <ul class="list-unstyled">
-                	<li><i class="fa fa-check color-green"></i> Odio dignissimos ducimus</li>
-                	<li><i class="fa fa-check color-green"></i> Blanditiis praesentium volup</li>
-                	<li><i class="fa fa-check color-green"></i> Eos et accusamus</li>
+                <div class="headline"><h2>Useful Links</h2></div>
+                 <ul class="list-unstyled">
+                    <li> <a href="{% url 'event:event-list' %}">Our Events</a> </li>
+                    <li><a href="{% url 'zinnia:entry_archive_index' %}">Our Blog</a></li>                              
+                	
                 </ul>
             </div><!--/col-md-3-->
         </div><!--/row-->        
