--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Account Activated" %}{% endblock %}
+{% block title %} Account Activated" {% endblock %}
 
 {% block main %}
 <p>
-    {% trans "Your account is now activated." %}
+     Your account is now activated.
     {% if not user.is_authenticated %}
-    {% trans "You can log in." %}
+    You can log in. 
     {% endif %}
 </p>
 {% endblock %}
