--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,6 +13,14 @@
 {% endblock %}
 {% block main %}
 <!--Reg Block-->
+ {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">  <!-- singular -->
+                <a class="close" data-dismiss="alert">×</a>
+                {{ message|safe }}
+            </div>
+        {% endfor %}
+    {% endif %}
 <div class="reg-block">
     <div class="reg-block-header">
         <h2>Sign In</h2>
@@ -24,16 +32,22 @@
         </ul>
         <p>Don't Have Account? Click <a  href="{% url 'registration_register' %}">{% trans "Register" %}</a> to registration.</p>            
     </div>
+ 
+    
     {% if form.errors %}
     <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">×</button>
         {% for field in form %} 
         {% if field.errors %}
         <li>{{ field.label }}: {{ field.errors|striptags }}</li>
-        {% endif %}
+        {% endif %}        
+        {% endfor %}
+        {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
         {% endfor %}
     </div>
-    {% endif %}            <form method="post" action="">
+    {% endif %}      
+          <form method="post" action="">
         {% csrf_token %}
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
