--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -54,13 +54,15 @@ You can also send us direct <a href="mailto:lscds.uoft@gmail.com"> email</a>
             	<!-- Contacts -->
                 <div class="headline"><h2>Contacts</h2></div>
                 <ul class="list-unstyled who margin-bottom-30">
-                    <li><a href="#"><i class="fa fa-home"></i>521 Sussex Ave<br>
-                                                       Sussex Clubhouse, Room 535<br>
-                                                        Toronto, ON, M5S 1J6</a></li>
+                    <li><a href="#"><i class="fa fa-home"></i>Medical Sciences Bldg <Br>
+                        University of Toronto - St. George Campus<br>
+                        1 King's College Circle<br>
+
+                        Toronto, ON M5S 1A852</a></li>
                     <li><a href="mailto:lscds.uoft@gmail.com"><i class="fa fa-envelope"></i>lscds.uoft [ at ] gmail.com</a></li>
                        </ul>
 
-            	<!-- Business Hours -->
+            	<!-- Business Hours >
                 <div class="headline"><h2>Business Hours</h2></div>
                 <ul class="list-unstyled margin-bottom-30">
                 	<li><strong>Monday-Friday:</strong> 10am to 8pm</li>
@@ -68,13 +70,15 @@ You can also send us direct <a href="mailto:lscds.uoft@gmail.com"> email</a>
                 	<li><strong>Sunday:</strong> Closed</li>
                 </ul>
 
-            	<!-- Why we are? -->
+            	<Why we are? >
                 <div class="headline"><h2>Useful Links</h2></div>
                  <ul class="list-unstyled">
-                    <li> <a href="{% url 'event:event-list' %}">Our Events</a> </li>
-                    <li><a href="{% url 'zinnia:entry_archive_index' %}">Our Blog</a></li>                              
+                    <li> <a href="">Our Events</a> </li>
+                    <li><a href="">Our Blog</a></li>                              
                 	
-                </ul>
+                </ul-->
+
+
             </div><!--/col-md-3-->
         </div><!--/row-->        
 
